Update travis configuration
    https://blog.travis-ci.com/2017-06-19-trusty-updates-2017-Q2

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@
 
 language: ruby
 dist: trusty
+sudo: required
+group: edge
 services:
   - docker
-
 script:
   - bundle exec rake
   - bundle exec kitchen test --concurrency 1 --color
